<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        tools:ignore="HardcodedText">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/browser" />
        <item
            android:id="@+id/nav_calculate"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/calculate" />
        <item
            android:id="@+id/ye"
            android:icon="@android:drawable/stat_sys_headset"
            android:title="YE"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Setings"/>
        <item
            android:id="@+id/nav_stories"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="Stories"/>
        <item
            android:id="@+id/nav_content"
            android:title="Internet Content"
            android:icon="@drawable/googleg_standard_color_18"/>
        <item
            android:id="@+id/carServiceFragment"
            android:title="Car Service"
            android:icon="?android:attr/actionModeFindDrawable"/>

        <item
            android:id="@+id/mapsFragment"
            android:title="Maps"
            android:icon="@android:drawable/ic_dialog_map"/>
    </group>
</menu>