<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.zotovml.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/ye"
        android:name="ru.mirea.zotovml.mireaproject.MusicFragment"
        android:label="play_music"
        tools:layout="@layout/fragment_music"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.zotovml.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.zotovml.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_calculate"
        android:name="ru.mirea.zotovml.mireaproject.CalculateFragment"
        android:label="fragment_calculate"
        tools:layout="@layout/fragment_calculate" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.zotovml.mireaproject.WebViewFragment"
        android:label="fragment_web_view"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/musicFragment"
        android:name="ru.mirea.zotovml.mireaproject.MusicFragment"
        android:label="fragment_music"
        tools:layout="@layout/fragment_music" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.mirea.zotovml.mireaproject.Settings"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_stories"
        android:name="ru.mirea.zotovml.mireaproject.Stories"
        android:label="fragment_stories"
        tools:layout="@layout/fragment_stories" />
    <fragment
        android:id="@+id/nav_content"
        android:name="ru.mirea.zotovml.mireaproject.ContentFragment"
        android:label="fragment_content"
        tools:layout="@layout/fragment_content" />
    <fragment
        android:id="@+id/carServiceFragment"
        android:name="ru.mirea.zotovml.mireaproject.CarServiceFragment"
        android:label="fragment_car_service"
        tools:layout="@layout/fragment_car_service" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="ru.mirea.zotovml.mireaproject.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/functional"
        android:name="ru.mirea.zotovml.mireaproject.Functional"
        android:label="fragment_functional"
        tools:layout="@layout/fragment_functional" />

</navigation>